Restrict access to /admin

--- a/test.cfg
+++ b/test.cfg
@@ -4,7 +4,7 @@ frontend htp80
     mode http
     acl app1 path_end -i /app1
     acl app2 path_end -i /app2
-
+    http-request deny if { path -i beg /admin }
     use_backend app1servers if app1
     use_backend app2servers if app2
 
